Added listing from db and pagination

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
 <main>
 
 	<div class="container text-center">
-		<a href="primers" class="btn btn-primary mt-3">Primers</a>
+		<a href="primers?page=1&perPage=<%=perPage %>" class="btn btn-primary mt-3">Primers</a>
 		<a href="#!" class="btn btn-primary mt-3">Oligonucleotides</a>
 		<a href="#!" class="btn btn-primary mt-3">Conserved Regions</a>
 		<hr class="my-5">
