--- a/views/pages/layout_dashboard.ejs
+++ b/views/pages/layout_dashboard.ejs
@@ -125,7 +125,7 @@
 								</li>
 								<li class="nav-item">
 									<a class="nav-link <% if(title == 'Manage Conserved Regions') { %> active <% } %>"
-										href="/dashboard/add_regions">
+										href="/dashboard/manage_regions">
 										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
 											viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
 											stroke-linecap="round" stroke-linejoin="round"
