--- a/views/pages/partials/_paginate.ejs
+++ b/views/pages/partials/_paginate.ejs
@@ -1,35 +1,62 @@
-<% if(paginate.hasPreviousPages || paginate.hasNextPages(pageCount)) { %>
+<% if(data.hasPrevPage || data.hasNextPage) { %>
 <nav aria-label="Page navigation">
 	<ul class="pagination justify-content-center">
-		<% if(paginate.hasPreviousPages) { %>
+		<% if(data.hasPrevPage) { %>
 		<li class="page-item">
-			<a class="page-link" href="paginate.href(true)" aria-label="Previous">
+			<a class="page-link" href="?page=1&perPage=<%= data.limit %>" aria-label="Previous">
 				<span aria-hidden="true">&laquo;</span>
 			</a>
 		</li>
 		<% } else { %>
 		<li class="page-item disabled">
-			<a class="page-link" href="paginate.href(true)" aria-label="Previous">
+			<a class="page-link" href="?page=1&perPage=<%= data.limit %>" aria-label="Previous">
 				<span aria-hidden="true">&laquo;</span>
 			</a>
 		</li>
 		<% } %>
-		<% if (pages) { %>
-		<% for (page in pages) { %>
+		<% if(data.hasPrevPage) { %>
 		<li class="page-item">
-			<a href="page.url" class="page-link"><%= pages[page] %></a>
+			<a class="page-link" href="?page=<%= data.prevPage %>&perPage=<%= data.limit %>" aria-label="Previous">
+				<span aria-hidden="true">&lsaquo;</span>
+			</a>
+		</li>
+		<% } else { %>
+		<li class="page-item disabled">
+			<a class="page-link" href="?page=<%= data.prevPage %>&perPage=<%= data.limit %>" aria-label="Previous">
+				<span aria-hidden="true">&lsaquo;</span>
+			</a>
 		</li>
 		<% } %>
+		<% for(let i = 1; i <= data.totalPages; i++) { %>
+		<% if(i == data.page) { %>
+		<li class="page-item active"><a class="page-link" href="?page=<%= i %>&perPage=<%= data.limit %>"><%= i %></a>
+		</li>
+		<% } else { %>
+		<li class="page-item"><a class="page-link" href="?page=<%= i %>&perPage=<%= data.limit %>"><%= i %></a></li>
 		<% } %>
-		<% if(paginate.hasNextages) { %>
+		<% } %>
+		<% if(data.hasNextPage) { %>
 		<li class="page-item">
-			<a class="page-link" href="paginate.href()" aria-label="Next">
+			<a class="page-link" href="?page=<%= data.nextPage %>&perPage=<%= data.limit %>" aria-label="Next">
+				<span aria-hidden="true">&rsaquo;</span>
+			</a>
+		</li>
+		<% } else { %>
+		<li class="page-item disabled">
+			<a class="page-link" href="?page=<%= data.nextPage %>&perPage=<%= data.limit %>" aria-label="Next">
+				<span aria-hidden="true">&rsaquo;</span>
+			</a>
+		</li>
+		<% } %>
+		<% if(data.page != data.totalPages) { %>
+		<li class="page-item">
+			<a class="page-link" href="?page=<%= data.totalPages %>&perPage=<%= data.limit %>" aria-label="Last">
 				<span aria-hidden="true">&raquo;</span>
 			</a>
 		</li>
 		<% } else { %>
 		<li class="page-item disabled">
-			<a class="page-link" href="paginate.href()" aria-label="Next">
+			<a class="page-link" href="?page=<%= data.totalPages %>&perPage=<%= data.limit %>" aria-label="Last">
 				<span aria-hidden="true">&raquo;</span>
 			</a>
 		</li>
