--- a/views/pages/primers.ejs
+++ b/views/pages/primers.ejs
@@ -5,7 +5,7 @@
 
 <%- contentFor('body') %>
 <div class="container-fluid">
-	<div class="table-responsive">
+	<div class="table-responsive mb-3">
 		<table class="table table-striped table-bordered table-hover mt-5">
 			<thead class="thead-dark">
 				<th scope="col">Primer</th>
@@ -15,28 +15,29 @@
 				<th scope="col">Notes</th>
 			</thead>
 			<tbody>
-				<% for(i in data) { %>
+				<% for(i in data.docs) { %>
 				<tr>
-					<th scope="row"><%= data[i].primer %></th>
-					<td><%= data[i].sequence %></td>
+					<th scope="row"><%= data.docs[i].primer %></th>
+					<td><%= data.docs[i].sequence %></td>
 					<td>
-						<% for(j in data[i].articles) { %>
-						<% if (data[i].articles[j].pdf) { %>
-						<a href="/file?id=<%= data[i].articles[j].link %>"
-							target="_blank"><%= data[i].articles[j].name %></a>
+						<% for(let j = 0; j < data.docs[i].articles.length; j++) { %>
+						<% if (data.docs[i].articles[j].pdf) { %>
+						<a href="/file?id=<%= data.docs[i].articles[j].link %>"
+							target="_blank"><%= data.docs[i].articles[j].name %></a>
 						<% } else { %>
-						<a href="<%= data[i].articles[j].link %>" target="_blank"><%= data[i].articles[j].name %></a>
+						<a href="<%= data.docs[i].articles[j].link %>"
+							target="_blank"><%= data.docs[i].articles[j].name %></a>
 						<% } %>
-						<% if (j != Object.keys(data[i].articles).length -1) { %>
+						<% if (j != data.docs[i].articles.length -1) { %>
 						<hr>
 						<% } %>
 						<% } %>
 					</td>
-					<td><%= data[i].blast %></td>
+					<td><%= data.docs[i].blast %></td>
 					<td>
-						<% for(j in data[i].notes) { %>
-						<%= data[i].notes[j].note %>
-						<% if (j != Object.keys(data[i].notes).length -1) { %>
+						<% for(let j = 0; j < data.docs[i].notes.length; j++) { %>
+						<%= data.docs[i].notes[j].note %>
+						<% if (j != data.docs[i].articles.length -1) { %>
 						<hr>
 						<% } %>
 						<% } %>
@@ -46,5 +47,6 @@
 			</tbody>
 		</table>
 	</div>
+	<% include ./partials/_paginate.ejs %>
 	<a href="/" class="btn btn-primary my-3">Go back</a>
 </div>
