--- a/views/pages/primers.ejs
+++ b/views/pages/primers.ejs
@@ -37,7 +37,7 @@
 					<td>
 						<% for(let j = 0; j < data.docs[i].notes.length; j++) { %>
 						<%= data.docs[i].notes[j].note %>
-						<% if (j != data.docs[i].articles.length -1) { %>
+						<% if (j != data.docs[i].notes.length -1) { %>
 						<hr>
 						<% } %>
 						<% } %>
