Fixed a few bugs & added manage primer functionality

--- a/views/pages/dashboard/edit_primers.ejs
+++ b/views/pages/dashboard/edit_primers.ejs
@@ -1,90 +1,253 @@
-<div class="modal fade" id="editPrimerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-	aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="editPrimerModalTitle">Edit Primer</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-			</div>
-			<form action="/dashboard/edit/<%= data.docs[i]._id %>" method="POST" enctype="multipart/form-data">
-				<div class="modal-body">
-					<div class="form-group">
-						<label for="inputPrimer">Primer</label>
-						<input type="text" class="form-control" name="primer" id="inputPrimer" placeholder="Primer">
-					</div>
-					<div class="form-group">
-						<label for="inputSequence">Sequence</label>
-						<input type="text" class="form-control" name="sequence" id="inputSequence"
-							placeholder="Sequence">
-					</div>
-					<div class="form-group">
-						<label>Articles (max. 5)</label>
-						<div id="articles" class="container">
-							<label for="inputArticle1">Article 1</label>
-							<input type="text" class="form-control" name="article" id="inputArticle1"
-								placeholder="Name">
-							<div class="form-row">
-								<div class="col-3">
-									<div class="custom-control custom-radio mt-3">
-										<input type="radio" id="isLink1" name="customRadio1" value="link"
-											class="custom-control-input radio_toggle" checked>
-										<label class="custom-control-label" for="isLink1">Link</label>
+<%- contentFor('body') %>
+<% include ../partials/messages.ejs %>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+	<h1 class="h2">Edit primer data</h1>
+</div>
+<div class="container">
+	<form id="edit_primer_form" action="/dashboard/edit/<%= data._id %>" method="POST">
+		<div class="form-group">
+			<label for="inputPrimer">Primer</label>
+			<input type="text" class="form-control" name="primer" value="<%= data.primer %>" id="inputPrimer"
+				placeholder="Primer">
+		</div>
+		<div class="form-group">
+			<label for="inputSequence">Sequence</label>
+			<input type="text" class="form-control" name="sequence" value="<%= data.sequence %>" id="inputSequence"
+				placeholder="Sequence">
+		</div>
+		<div class="form-group">
+			<label>Articles (max. 5)</label>
+			<div id="articles" class="container">
+				<% for(let i = 0; i < data.articles.length; i++) { %>
+				<div id="<%= 'article'+(i+1) %>">
+					<label for="<%= 'inputArticle'+(i+1) %>"><%= 'Article '+(i+1) %></label>
+					<input type="text" class="form-control" name="article" value="<%= data.articles[i].name %>"
+						id="<%= 'inputArticle'+(i+1) %>" placeholder="Name">
+					<div class="form-row">
+						<div class="col-3">
+							<% if(data.articles[i].pdf == false) { %>
+							<div class="custom-control custom-radio mt-3">
+								<input type="radio" id="<%= 'isLink'+(i+1) %>" name="<%= 'customRadio'+(i+1) %>"
+									value="link" class="custom-control-input radio_toggle" checked>
+								<label class="custom-control-label" for="<%= 'isLink'+(i+1) %>">Link</label>
+							</div>
+							<div class="custom-control custom-radio mt-3">
+								<input type="radio" id="<%= 'isPDF'+(i+1) %>" name="<%= 'customRadio'+(i+1) %>"
+									value="pdf" class="custom-control-input radio_toggle">
+								<label class="custom-control-label" for="<%= 'isPDF'+(i+1) %>">PDF</label>
+							</div>
+							<% } else { %>
+							<div class="custom-control custom-radio mt-3">
+								<input type="radio" id="<%= 'isLink'+(i+1) %>" name="<%= 'customRadio'+(i+1) %>"
+									value="link" class="custom-control-input radio_toggle">
+								<label class="custom-control-label" for="<%= 'isLink'+(i+1) %>">Link</label>
+							</div>
+							<div class="custom-control custom-radio mt-3">
+								<input type="radio" id="<%= 'isPDF'+(i+1) %>" name="<%= 'customRadio'+(i+1) %>"
+									value="pdf" class="custom-control-input radio_toggle" checked>
+								<label class="custom-control-label" for="<%= 'isPDF'+(i+1) %>">PDF</label>
+							</div>
+							<% } %>
+
+						</div>
+						<div class="col-9 mt-3">
+							<div id="<%= 'linkInput'+(i+1) %>" class="form-group">
+								<label for="<%= 'inputLink'+(i+1) %>">Link</label>
+								<input type="text" class="form-control" name="link" id="<%= 'inputLink'+(i+1) %>"
+									value="<%= data.articles[i].link %>" placeholder="Link">
+							</div>
+							<div id="<%= 'pdfInput'+(i+1) %>" class="form-group">
+								<div class="input-group mb-1">
+									<div class="input-group-prepend">
+										<label class="input-group-text" for="pdfSelect">PDF</label>
 									</div>
-									<div class="custom-control custom-radio mt-3">
-										<input type="radio" id="isPDF1" name="customRadio1" value="pdf"
-											class="custom-control-input radio_toggle">
-										<label class="custom-control-label" for="isPDF1">PDF</label>
-									</div>
+									<select class="custom-select" name="pdf" size="2" id="<%= 'pdfSelect'+(i+1) %>">
+										<option value="#!">Choose a pdf...</option>
+										<% for(let j = 0; j < pdfList.length; j++) { %>
+										<% if(data.articles[i].link == pdfList[j]) { %>
+										<option value="<%=pdfList[j] %>" selected><%= pdfList[j] %></option>
+										<% } else { %>
+										<option value="<%=pdfList[j] %>"><%= pdfList[j] %></option>
+										<% } %>
+										<% } %>
+									</select>
 								</div>
-								<div class="col-9 mt-3">
-									<div id="linkInput1" class="form-group">
-										<label for="inputLink1">Link</label>
-										<input type="text" class="form-control" name="link" id="inputLink1"
-											placeholder="Link">
-									</div>
-									<div id="pdfInput1" class="form-group">
-										<div class="input-group mb-1">
-											<div class="input-group-prepend">
-												<label class="input-group-text" for="pdfSelect">PDF</label>
-											</div>
-											<select class="custom-select" name="pdf" size="2" id="pdfSelect1">
-												<option value="#!" selected>Choose a pdf...</option>
-												<% for(let i = 0; i < pdfList.length; i++) { %>
-												<option value="<%=pdfList[i] %>"><%= pdfList[i] %></option>
-												<% } %>
-											</select>
-										</div>
-										<a href="#!" data-toggle="modal" data-target="#addFileModal">+ Add new pdf
-											file</a>
-									</div>
-								</div>
+								<a href="#!" data-toggle="modal" data-target="#addFileModal">+ Add new pdf
+									file</a>
 							</div>
 						</div>
-						<a href="#!" class="add_article">+ Add more articles</a>
-					</div>
-					<div class="form-group">
-						<label for="inputBlast">BLAST</label>
-						<input type="text" class="form-control" name="blast" id="inputBlast" placeholder="BLAST">
-					</div>
-					<div class="form-group">
-						<label>Notes (max. 5)</label>
-						<div class="container" id="notes" name="notes">
-							<label for="inputNotes1">Note 1</label>
-							<input type="text" class="form-control" name="note" id="inputNotes1" placeholder="Note">
-						</div>
-						<a href="#!" class="add_note">+ Add more notes</a>
 					</div>
 				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-					<button type="submit" formaction="/dashboard/edit/<%= data.docs[i]._id %>" id="edit_primer"
-						class="btn btn-primary">Edit Primer</button>
-					<button type="submit" formaction="/dashboard/delete/<%= data.docs[i]._id %>" id="delete_primer"
-						class="btn btn-primary">Delete Primer</button>
-				</div>
-			</form>
+				<% } %>
+			</div>
+			<div class="d-flex">
+				<button type="button" class="btn btn-link btn-sm add_article">+ Add article</button>
+				<button type="button" class="btn btn-link btn-sm remove_article ml-auto" disabled>- Remove last
+					article</button>
+			</div>
 		</div>
-	</div>
+		<div class="form-group">
+			<label for="inputBlast">BLAST</label>
+			<input type="text" class="form-control" name="blast" value="<%= data.blast %>" id="inputBlast"
+				placeholder="BLAST">
+		</div>
+		<div class="form-group">
+			<label>Notes (max. 5)</label>
+			<div class="container" id="notes" name="notes">
+				<% for(let i = 0; i < data.notes.length; i++) { %>
+				<div id="<%= 'note'+(i+1) %>">
+					<label for="<%= 'inputNotes'+(i+1) %>"><%= 'Note'+(i+1) %></label>
+					<input type="text" class="form-control" name="note" value="<%= data.notes[i].note %>"
+						id="<%= 'inputNotes'+(i+1) %>" placeholder="Note">
+				</div>
+				<% } %>
+			</div>
+			<div class="d-flex ">
+				<button type="button" class="btn btn-link btn-sm add_note">+ Add note</button>
+				<button type="button" class="btn btn-link btn-sm remove_note ml-auto" disabled>- Remove last
+					note</button>
+			</div>
+		</div>
+		<input class="btn btn-primary my-3" type="submit" value="Update primer">
+	</form>
+	<a href="/dashboard/manage_primers" class="btn btn-primary my-3">Go back</a>
 </div>
+
+<%- contentFor('scripts') %>
+<script type="text/javascript">
+	$(document).ready(() => {
+		let maxFields = 5;
+		let minFields = 0;
+		let articles = $('#articles');
+		let notes = $('#notes');
+		let add_article = $('.add_article');
+		let remove_article = $('.remove_article');
+		let add_note = $('.add_note');
+		let remove_note = $('.remove_note');
+
+		let article_count = articles.children().length;
+		let note_count = notes.children().length;
+		console.log(note_count);
+
+		const showHideFields = () => {
+			for (let i = 1; i <= article_count; i++) {
+				let checked = $(`input[name=customRadio${i}]:checked`, '#edit_primer_form').val();
+				if (checked == 'link') {
+					$(`#linkInput${i}`).show();
+					$(`#pdfInput${i}`).hide();
+				} else if (checked == 'pdf') {
+					$(`#linkInput${i}`).hide();
+					$(`#pdfInput${i}`).show();
+				}
+			}
+		};
+
+		$(articles).ready(() => {
+			showHideFields();
+		});
+
+		$(articles).change(() => {
+			showHideFields();
+		});
+
+		$(add_article).click(e => {
+			e.preventDefault();
+			if (article_count < maxFields) {
+				article_count++;
+				remove_article.attr('disabled', false);
+				$(articles).append(` <div id="article${article_count}">
+				<label for="inputArticle${article_count}">Article
+											${article_count}</label>
+											<input type="text" class="form-control" name="article"
+												id="inputArticle${article_count}" placeholder="Name">
+											<div class="form-row">
+												<div class="col-3">
+													<div class="custom-control custom-radio mt-3">
+														<input type="radio" id="isLink${article_count}"
+															name="customRadio${article_count}" value="link"
+															class="custom-control-input radio_toggle"
+															checked>
+														<label class="custom-control-label"
+															for="isLink${article_count}">Link</label>
+													</div>
+													<div class="custom-control custom-radio mt-3">
+														<input type="radio" id="isPDF${article_count}"
+															name="customRadio${article_count}" value="pdf"
+															class="custom-control-input radio_toggle">
+														<label class="custom-control-label"
+															for="isPDF${article_count}">PDF</label>
+													</div>
+												</div>
+												<div class="col-9 mt-3">
+													<div id="linkInput${article_count}" class="form-group">
+														<label for="inputLink${article_count}">Link</label>
+														<input type="text" class="form-control" name="link"
+															id="inputLink${article_count}" placeholder="Link">
+													</div>
+													<div id="pdfInput${article_count}" class="form-group">
+														<div class="input-group mb-1">
+															<div class="input-group-prepend">
+																<label class="input-group-text"
+																	for="pdfSelect">PDF</label>
+															</div>
+															<select class="custom-select"
+															size="2" name="pdf" id="pdfSelect${article_count}">
+																<option value="#!" selected>Choose a pdf...</option>
+																<% for(let i = 0; i < pdfList.length; i++) { %>
+																<option value="<%=pdfList[i] %>"><%= pdfList[i] %></option>
+																<% } %>
+															</select>
+														</div>
+														<a href="#!" data-toggle="modal"
+															data-target="#addFileModal">+ Add new pdf
+															file</a>
+													</div>
+												</div>
+											</div>
+										</div>
+											`);
+			}
+			if (article_count >= maxFields) {
+				add_article.attr('disabled', true);
+			}
+			showHideFields();
+		});
+
+		$(remove_article).click(e => {
+			e.preventDefault();
+			if (article_count > minFields) {
+				article_count--;
+				$(`#article${article_count + 1}`).remove();
+				add_article.attr('disabled', false);
+			};
+			if (article_count == minFields) {
+				remove_article.attr('disabled', true);
+			}
+		});
+
+		$(add_note).click(e => {
+			e.preventDefault();
+			if (note_count < maxFields) {
+				remove_note.attr('disabled', false);
+				note_count++;
+				$(notes).append(`<div id="note${note_count}"><label for="inputNotes${note_count}">Note ${note_count}</label>
+					<input type="text" class="form-control" name="note" id="inputNotes${note_count}" placeholder="Note"></div>`);
+			}
+			if (note_count >= maxFields) {
+				add_note.attr('disabled', true);
+			}
+		});
+
+		$(remove_note).click(e => {
+			e.preventDefault();
+			if (note_count > minFields) {
+				note_count--;
+				$(`#note${note_count + 1}`).remove();
+				add_note.attr('disabled', false);
+			};
+			if (note_count == minFields) {
+				remove_note.attr('disabled', true);
+			}
+		});
+	});
+</script>
