--- a/views/pages/partials/upload_file.ejs
+++ b/views/pages/partials/upload_file.ejs
@@ -1,4 +1,4 @@
-<div class="modal fade" id="addFileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+<div class="modal fade" id="addFileModal" tabindex="-1" role="dialog" aria-labelledby="addFileModalTitle"
 	aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
@@ -10,7 +10,7 @@
 			</div>
 			<form action="/dashboard/uploadpdf" method="POST" enctype="multipart/form-data">
 				<div class="modal-body">
-					<p>Select pdf file you want to upload:</p>
+					<p>Select pdf file you want to upload (make sure the file name is intuitive):</p>
 					<div class="input-group mb-3">
 						<div class="custom-file">
 							<input type="file" name="pdfup" class="custom-file-input" id="inputFile"
