--- a/views/pages/dashboard/add_primers.ejs
+++ b/views/pages/dashboard/add_primers.ejs
@@ -7,54 +7,21 @@
 	<form id="add_primer_form" action="/dashboard/add_primers" method="POST">
 		<div class="form-group">
 			<label for="inputPrimer">Primer</label>
-			<input type="text" class="form-control" name="primer" id="inputPrimer" placeholder="Primer">
+			<input type="text" class="form-control" name="primer" id="inputPrimer" placeholder="Primer" required>
 		</div>
 		<div class="form-group">
 			<label for="inputSequence">Sequence</label>
-			<input type="text" class="form-control" name="sequence" id="inputSequence" placeholder="Sequence">
+			<input type="text" class="form-control" name="sequence" id="inputSequence" placeholder="Sequence" required>
 		</div>
 		<div class="form-group">
 			<label>Articles (max. 5)</label>
 			<div id="articles" class="container">
-				<label for="inputArticle1">Article 1</label>
-				<input type="text" class="form-control" name="article" id="inputArticle1" placeholder="Name">
-				<div class="form-row">
-					<div class="col-3">
-						<div class="custom-control custom-radio mt-3">
-							<input type="radio" id="isLink1" name="customRadio1" value="link"
-								class="custom-control-input radio_toggle" checked>
-							<label class="custom-control-label" for="isLink1">Link</label>
-						</div>
-						<div class="custom-control custom-radio mt-3">
-							<input type="radio" id="isPDF1" name="customRadio1" value="pdf"
-								class="custom-control-input radio_toggle">
-							<label class="custom-control-label" for="isPDF1">PDF</label>
-						</div>
-					</div>
-					<div class="col-9 mt-3">
-						<div id="linkInput1" class="form-group">
-							<label for="inputLink1">Link</label>
-							<input type="text" class="form-control" name="link" id="inputLink1" placeholder="Link">
-						</div>
-						<div id="pdfInput1" class="form-group">
-							<div class="input-group mb-1">
-								<div class="input-group-prepend">
-									<label class="input-group-text" for="pdfSelect">PDF</label>
-								</div>
-								<select class="custom-select" name="pdf" size="2" id="pdfSelect1">
-									<option value="#!" selected>Choose a pdf...</option>
-									<% for(let i = 0; i < pdfList.length; i++) { %>
-									<option value="<%=pdfList[i] %>"><%= pdfList[i] %></option>
-									<% } %>
-								</select>
-							</div>
-							<a href="#!" data-toggle="modal" data-target="#addFileModal">+ Add new pdf
-								file</a>
-						</div>
-					</div>
-				</div>
 			</div>
-			<a href="#!" class="add_article">+ Add more articles</a>
+			<div class="d-flex">
+				<button type="button" class="btn btn-link btn-sm add_article">+ Add article</button>
+				<button type="button" class="btn btn-link btn-sm remove_article ml-auto" disabled>- Remove last
+					article</button>
+			</div>
 		</div>
 		<div class="form-group">
 			<label for="inputBlast">BLAST</label>
@@ -63,16 +30,18 @@
 		<div class="form-group">
 			<label>Notes (max. 5)</label>
 			<div class="container" id="notes" name="notes">
-				<label for="inputNotes1">Note 1</label>
-				<input type="text" class="form-control" name="note" id="inputNotes1" placeholder="Note">
 			</div>
-			<a href="#!" class="add_note">+ Add more notes</a>
+			<div class="d-flex ">
+				<button type="button" class="btn btn-link btn-sm add_note">+ Add note</button>
+				<button type="button" class="btn btn-link btn-sm remove_note ml-auto" disabled>- Remove last
+					note</button>
+			</div>
 		</div>
-		<input class="btn btn-primary my-3" formaction="/dashboard/add_primers" type="submit" value="Insert primer">
+		<input class="btn btn-primary my-3" type="submit" value="Insert primer">
 	</form>
 	<a href="/dashboard" class="btn btn-primary my-3">Go back</a>
 
-	<% include upload_file.ejs %>
+	<% include ../partials/upload_file.ejs %>
 </div>
 
 <%- contentFor('scripts') %>
@@ -84,13 +53,16 @@
 
 	$(document).ready(() => {
 		let maxFields = 5;
+		let minFields = 0;
 		let articles = $('#articles');
 		let notes = $('#notes');
 		let add_article = $('.add_article');
+		let remove_article = $('.remove_article');
 		let add_note = $('.add_note');
+		let remove_note = $('.remove_note');
 
-		let article_count = 1;
-		let note_count = 1;
+		let article_count = articles.children().length;
+		let note_count = notes.children().length;
 
 		const showHideFields = () => {
 			for (let i = 1; i <= article_count; i++) {
@@ -117,7 +89,9 @@
 			e.preventDefault();
 			if (article_count < maxFields) {
 				article_count++;
-				$(articles).append(` <label for="inputArticle${article_count}">Article
+				remove_article.attr('disabled', false);
+				$(articles).append(` <div id="article${article_count}">
+				<label for="inputArticle${article_count}">Article
 											${article_count}</label>
 											<input type="text" class="form-control" name="article"
 												id="inputArticle${article_count}" placeholder="Name">
@@ -160,23 +134,55 @@
 															</select>
 														</div>
 														<a href="#!" data-toggle="modal"
-															data-target="#exampleModalCenter">+ Add new pdf
+															data-target="#addFileModal">+ Add new pdf
 															file</a>
 													</div>
 												</div>
 											</div>
+										</div>
 											`);
 			}
+			if (article_count >= maxFields) {
+				add_article.attr('disabled', true);
+			}
 			showHideFields();
+		});
+
+		$(remove_article).click(e => {
+			e.preventDefault();
+			if (article_count > minFields) {
+				article_count--;
+				$(`#article${article_count + 1}`).remove();
+				add_article.attr('disabled', false);
+			};
+			if (article_count == minFields) {
+				remove_article.attr('disabled', true);
+			}
 		});
 
 		$(add_note).click(e => {
 			e.preventDefault();
 			if (note_count < maxFields) {
+				remove_note.attr('disabled', false);
 				note_count++;
-				$(notes).append(`<label for="inputNotes${note_count}">Note ${note_count}</label>
-				<input type="text" class="form-control" name="note" id="inputNotes${note_count}" placeholder="Note">`);
+				$(notes).append(`<div id="note${note_count}"><label for="inputNotes${note_count}">Note ${note_count}</label>
+					<input type="text" class="form-control" name="note" id="inputNotes${note_count}" placeholder="Note"></div>`);
 			}
-		})
+			if (note_count >= maxFields) {
+				add_note.attr('disabled', true);
+			}
+		});
+
+		$(remove_note).click(e => {
+			e.preventDefault();
+			if (note_count > minFields) {
+				note_count--;
+				$(`#note${note_count + 1}`).remove();
+				add_note.attr('disabled', false);
+			};
+			if (note_count == minFields) {
+				remove_note.attr('disabled', true);
+			}
+		});
 	});
 </script>
