--- a/views/pages/layout_dashboard.ejs
+++ b/views/pages/layout_dashboard.ejs
@@ -41,6 +41,20 @@
 								</a>
 							</li>
 							<li class="nav-item">
+								<a class="nav-link" href="#!" data-toggle="modal" data-target="#addFileModal">
+									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+										fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round" class="feather feather-file-text">
+										<path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+										<polyline points="14 2 14 8 20 8"></polyline>
+										<line x1="16" y1="13" x2="8" y2="13"></line>
+										<line x1="16" y1="17" x2="8" y2="17"></line>
+										<polyline points="10 9 9 9 8 9"></polyline>
+									</svg>
+									Add new article pdf file
+								</a>
+							</li>
+							<li class="nav-item">
 								<a class="nav-link <% if(title == 'Add Primers') { %> active <% } %>"
 									href="/dashboard/add_primers">
 									<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="dna"
@@ -148,6 +162,7 @@
 					<%- body %>
 				</main>
 			</div>
+			<% include ./partials/upload_file.ejs %>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -160,6 +175,12 @@
 			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 			crossorigin="anonymous"></script>
 		<script type="text/javascript" src="/javascript/bootstrap-auto-dismiss.js"></script>
+		<script>
+			let inputFile = document.querySelector(' #inputFile'); inputFile.addEventListener('change', () => {
+				let fileName = inputFile.value.slice(12);
+				document.getElementById('fileLabel').innerHTML = fileName;
+			});
+		</script>
 		<%- defineContent('scripts') %>
 	</body>
 
