--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 	<div class="container text-center">
 		<a href="primers?page=1&perPage=<%=perPage %>" class="btn btn-primary mt-3">Primers</a>
 		<a href="#!" class="btn btn-primary mt-3">Oligonucleotides</a>
-		<a href="#!" class="btn btn-primary mt-3">Conserved Regions</a>
+		<a href="#!" class="btn btn-primary mt-3">Target Regions</a>
 		<hr class="my-5">
 		<div class="row">
 			<div class="col-md-4">
