--- a/views/pages/dashboard/dashboard.ejs
+++ b/views/pages/dashboard/dashboard.ejs
@@ -28,9 +28,9 @@
 	<div class="col-sm-6 col-md-6 col-xl-4 mt-2">
 		<div class="card" style="width: 18rem;">
 			<div class="card-body">
-				<h5 class="card-title">Conserved regions</h5>
+				<h5 class="card-title">Target regions</h5>
 				<h6 class="card-subtitle mb-2 text-muted">Insert data</h6>
-				<p class="card-text">Use this page in order to add new conserved region data to database.</p>
+				<p class="card-text">Use this page in order to add new target region data to database.</p>
 				<a href="/dashboard/add_regions" class="card-link">Go to page</a>
 			</div>
 		</div>
