--- a/views/pages/primers.ejs
+++ b/views/pages/primers.ejs
@@ -1,3 +1,10 @@
+<%- contentFor('styles') %>
+<style>
+	#searchFor {
+		border-top-right-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+</style>
 <%- contentFor('header') %>
 <header>
 	<h1 class="page-title text-center mt-5"><%= title %></h1>
@@ -5,6 +12,21 @@
 
 <%- contentFor('body') %>
 <div class="container-fluid">
+	<form id="search" action="/primers/search" method="POST" class="form-inline my-2 my-lg-0">
+		<div class="input-group mb-3">
+			<div class="input-group-prepend">
+				<select name="searchFor" id="searchFor" class="custom-select">
+					<option selected disabled>Search for</option>
+					<option value="primer">Primer</option>
+					<option value="sequence">Sequence</option>
+				</select>
+			</div>
+			<input type="search" placeholder="Search" class="form-control" name="search" aria-label="Search">
+			<div class="input-group-append">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</div>
+		</div>
+	</form>
 	<div class="table-responsive mb-3">
 		<table class="table table-striped table-bordered table-hover mt-5">
 			<thead class="thead-dark">
@@ -22,7 +44,7 @@
 					<td>
 						<% for(let j = 0; j < data.docs[i].articles.length; j++) { %>
 						<% if (data.docs[i].articles[j].pdf) { %>
-						<a href="/file?id=<%= data.docs[i].articles[j].link %>"
+						<a href="/download/<%= data.docs[i].articles[j].link %>"
 							target="_blank"><%= data.docs[i].articles[j].name %></a>
 						<% } else { %>
 						<a href="<%= data.docs[i].articles[j].link %>"
@@ -50,3 +72,14 @@
 	<% include ./partials/_paginate.ejs %>
 	<a href="/" class="btn btn-primary my-3">Go back</a>
 </div>
+
+<%- contentFor('scripts') %>
+<script>
+	$(function () {
+		$('.dropdown-menu a').click(e => {
+			e.preventDefault();
+			$('#searchFor').text($(e.currentTarget).text());
+			$('#searchFor').val($(e.currentTarget).text());
+		});
+	});
+</script>
